<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SimplyCook</string>
    <string name="app_id">703060996447482</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Button -->
    <string name="buttonLogIn">Connexion</string>
    <string name="buttonLogInFacebook">Connexion avec Facebook</string>
    <string name="buttonLogOutFacebook">Déconnexion</string>
    <string name="buttonCreateAccount">Créer un compte</string>
    <string name="buttonAdd">Ajouter</string>
    <string name="buttonSuggest">Suggérer</string>

    <!-- - Pop up connexion -->
    <string name="messageLoginPopup">Entrez votre identifiant et votre mot de passe</string>
    <string name="titleLoginPopup">Connexion</string>
    <string name="positiveLoginPopup">Se connecter</string>
    <string name="negativeLoginPopup">Annuler</string>
    <string name="usernameLoginPopup">Identifiant</string>
    <string name="passwordLoginPopup">Mot de passe</string>
    <string name="title_activity_create_account">CreateAccountActivity</string>

    <!-- Create account -->
    <string name="titleCreateAccount">Créer votre compte</string>
    <string name="hintFirstName">Prénom</string>
    <string name="hintLastName">Nom</string>
    <string name="hintMail">Mail</string>
    <string name="hintPassword">Mot de passe</string>

    <!-- Error message -->
    <string name="errorMessage_emailAlreadyUsed">L\'adresse mail est déjà utilisée.</string>
    <string name="errorMessage_incorrectEmail">L\'adresse mail est incorrect</string>
    <string name="errorMessage_incorrectPassword">La combinaison email / mot de passe est incorrect.</string>
    <string name="errorPasswordRequired">Un mot de passe est requis</string>
    <string name="errorFirstNameRequired">Un prénom est requis</string>
    <string name="errorLastNameRequired">Un nom de famille est requis</string>
    <string name="errorEmailRequired">Un email est requis</string>
    <string name="errorMessage_needInternetConnection">Une connexion internet est requise</string>
    <string name="errorMessage_userDoesNotExist">L\'email ne correspond à aucun utilisateur</string>
    <string name="title_activity_home">Accueil</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="NoFavoris">Aucun favoris</string>
    <string name="NoResult">Aucun résultat</string>

    <!-- Title -->
    <string name="title_myprofil">Mon profil</string>
    <string name="title_myfavoris">Mes favoris</string>
    <string name="title_mymessages">Mes messages</string>
    <string name="title_search">Recherche</string>
    <string name="title_comparaison">Comparaison</string>
    <string name="title_activity_profil">Mon profil</string>
    <string name="title_activity_favoris">Mes favoris</string>
    <string name="title_activity_comparaison">Comparaison</string>
    <string name="title_activity_search">Recherche</string>
    <string name="title_add_tastes">Ajouter un goût</string>
    <string name="title_suggest_tastes">Suggérer un goût</string>
    <string name="title_histastes">Ses goûts</string>
    <string name="title_mytastes">Mes goûts</string>
    <string name="title_manage_tastes">Gérer mes goûts</string>
    <string name="choose_action_comparation">Choisir une action</string>
    <string name="title_activity_comparaison_add_from_favoris">Ajout des favoris</string>
    <string name="title_activity_comparaison_add_from_search">Ajout depuis une recherche</string>

    <!-- Action -->
    <string name="action_disconnect">Déconnexion</string>

    <!-- Hint -->
    <string name="hintComment">Commentaire</string>
    <string name="hintSearchPeople">Rechercher</string>

    <!-- Array -->
    <string-array name="list_add_from_comparaison">
        <item>Ajouter depuis les favoris</item>
        <item>Ajouter depuis une recherche</item>
        <item>Supprimer</item>
    </string-array>


</resources>
