<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_gravity="center_horizontal"
    android:layout_height="match_parent"
    android:id="@+id/create_account_fragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/titleCreateAccount"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintFirstName"
        android:layout_marginTop="40dp"
        android:id="@+id/firstName"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintLastName"
        android:layout_marginTop="20dp"
        android:id="@+id/lastName"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/hintMail"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:id="@+id/email"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintPassword"
        android:layout_marginTop="20dp"
        android:password="true"
        android:id="@+id/password" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="20dp"
        android:text="@string/titleCreateAccount"
        android:id="@+id/btn_create_new_account"/>

</LinearLayout>
