<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fb="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/SimplyCook.mainBackground">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/simply_cook"
        android:layout_weight="1"
        android:baselineAlignBottom="false" />

    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal">

        <com.facebook.widget.LoginButton
            android:id="@+id/authButton"
            android:inputType="none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            fb:login_text="@string/buttonLogInFacebook"
            fb:logout_text="@string/buttonLogOutFacebook"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/buttonLogIn"
            android:id="@+id/btn_login"/>

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/buttonCreateAccount"
            android:id="@+id/btn_create_account"/>

    </LinearLayout>

</LinearLayout>